Hospital Management System/force-app/main/default/objects/Consultation__c/Consultation__c.object-meta.xml
<CustomObject>

    <label>Consultation</label>
    <pluralLabel>Consultations</pluralLabel>

    <nameField>
        <label>Consultation Number</label>
        <type>AutoNumber</type>
        <displayFormat>CON-{0000}</displayFormat>
    </nameField>

    <sharingModel>ReadWrite</sharingModel>

    <description>
        Represents each consultation between a patient and a doctor.
        Stores visit dates, charges, follow-up information, and visit counts
        for clinical and billing purposes.
    </description>


</CustomObject>