Hospital Management System/force-app/main/default/objects/Consultation__c/fields/Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Visit__c</fullName>
    <label>Date of Visit</label>
    <type>Date</type>
    <required>true</required>
    <description>
        Date on which the consultation occurred.
    </description>
</CustomField>