Hospital Management System/force-app/main/default/objects/Consultation__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <label>Doctor</label>
    <type>Lookup</type>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Consultations</relationshipLabel>
    <relationshipName>Consultations</relationshipName>
    <description>
        Doctor who conducted the consultation.
    </description>
</CustomField>