Hospital Management System/force-app/main/default/objects/Consultation__c/fields/Next_Visit__c.field-meta.xml
<CustomField>
    <fullName>Next_Visit__c</fullName>
    <label>Next Visit</label>
    <type>Date</type>
    <description>
        Suggested follow-up consultation date.
    </description>
</CustomField>