Hospital Management System/force-app/main/default/objects/Consultation__c/fields/Number_of_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Visits__c</fullName>
    <label>Number of Visits</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>
        Count of visits for the patient with the same doctor.
        Typically incremented via automation.
    </description>
</CustomField>