Hospital Management System/force-app/main/default/objects/Consultation__c/fields/Visit_Charges__c.field-meta.xml
<CustomField>
    <fullName>Visit_Charges__c</fullName>
    <label>Visit Charges</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>
        Charges applied for the consultation.
    </description>
</CustomField>